--- a/Portfolio-JRH/package.json
+++ b/Portfolio-JRH/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sass": "^1.80.4"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
